Modernized Layout. Changed position of Sortierungselement to left.

--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -3,7 +3,7 @@
 Die Startseite ist die erste Seite des Admin-Panels und somit der Index.
 Auf der Startseite wird der Name des PSE-Projektes angezeigt sowie eine Kurzbeschreibung.
 
-\paragraph{Layout}
+\paragraph*{Layout}
 Die Startseite nutzt das Public-Layout.
 
 \paragraph*{Erreichbarkeit}
