--- a/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
@@ -21,20 +21,23 @@ Sie zeigt verschiedene Informationen an, so mindestens:
     \item Anzahl der Einträge auf der Blacklist
 \end{itemize}
 
-\paragraph*{Desktop}
-\subparagraph*{Statischer Aufbau}
+\paragraph*{Statischer Aufbau}
+\subparagraph*{Desktop}
 Das Dashboard ist in zwei übereinanderliegende horizontale Boxen aufgeteilt.
 In der oberen Box steht eine Begrüßung.
 Die untere Box ist in weitere Abschnitte aufgeteilt, einen Abschnitt pro angezeigter Information.
 
-\paragraph*{Mobil}
+\subparagraph*{Mobil}
 Das Dashboard ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese Boxen nehmen die komplette Horizontale ein.
 In der oberen Box steht eine Begrüßung.
 Die untere Box ist in weitere Abschnitte aufgeteilt, einen Abschnitt pro angezeigter Information.
 Diese Informationsabschnitte sind untereinander.
 Jeder Informationsabschnitt nimmt die komplette Breite der Box ein.
 
-\subparagraph*{Allgemeines dynamisches Verhalten}
+\paragraph*{Allgemeines dynamisches Verhalten}
 Die Begrüßung zeigt den hinterlegten Namen des angemeldeten Administrators an und begrüßt diesen.
 Die Abschnitte für die Informationen werden zum Seitenaufruf bestimmt. 
 Informationen in Form von konkreten Zahlen werden hochgezählt, bis diese ihren Wert erreicht haben.
+
+\paragraph*{Initialer Zustand}
+Die Informationen werden vom Backend angefragt und anschließend dargestellt.
