Added missing description.

--- a/Kapitel/02_App/02_ViewModel/SettingsController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/SettingsController/main.tex
@@ -37,7 +37,7 @@ void
 Veranlasst die Änderung der Speicherung des Suchverlaufs abhängig vom gegebenen Wert.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item value : boolean
+    \item value : boolean = Wert, ob der Suchverlauf gespeichert werden soll oder nicht
 \end{itemize}
 \paragraph*{Rückgabewert}
 void
