--- a/Kapitel/00_Backend/Services/AliasSuggestionService/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionService/main.tex
@@ -2,3 +2,4 @@
 
 \inprelmod{Beschreibung}
 \inprelmod{addAliasSuggestion_String,int,String_boolean}
+\inpremod{removeAliasSuggestion_String,int,String_boolean}
