--- a/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
@@ -12,7 +12,7 @@ Die Felder 7 bis 9 sind zusammengefasst und beinhaltend die Verlinkungen.
 Das Public-Layout besteht aus 3 horizontalen übereinanderliegende Segmente, die die ihnen zur Verfügung stehende Horizontale füllen.
 Segment 1 beinhaltet den Inhalt der Seite, die das Public-Layout nutzt. 
 Segment 2 beinhaltet die Anmeldung.
-Segment 3 beinhaltet die Verlinkungen
+Segment 3 beinhaltet die Verlinkungen.
 
 \subsubsection{Dargestellte Inhalte}
 \paragraph*{Seiteninhalt}
