--- a/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
@@ -11,7 +11,7 @@ Der Seiteninhalt hat eine einheitliche Hintergrundfarbe.
 
 \subparagraph*{Dynamisches Verhalten}
 Die Navigation ist zunächst nach links eingeklappt und zeigt keine Inhalte an. Wird über die Navigation gehovert oder auf diese geklickt,
-so klappt sich die Navigation auf ihre volle Größe aus. 
+so klappt sich die Navigation nach rechts aus. 
 
 \paragraph*{Mobil}
 Das Admin-Layout ist in zwei horizontale Bereiche, Navigation und Seiteninhalt, untergliedert.
@@ -22,7 +22,7 @@ Der Seiteninhalt nimmt den kompletten horizontalen Bereich ein und hat eine einh
 
 \subparagraph*{Dynamisches Verhalten}
 Die Navigation ist zunächst nach unten eingeklappt. Wird über die Navigation gehovert oder auf diese geklickt,
-so klappt sich die Navigation auf ihre volle Größe nach oben aus.
+so klappt sich die Navigation nach oben aus.
 
 \paragraph*{Dargestellte Inhalte}
 \subparagraph*{Navigation}
