Add javadoc for method 'evaluateAliasSuggestion_String,int,String,boolean_boolean'
Add javadoc for methods
'Kapitel/00_Backend/Services/AliasSuggestionService/
evaluateAliasSuggestion_String,int,String,boolean_boolean',
'Kapitel/00_Backend/Services/AliasSuggestionService/
evaluateAliasSuggestion_String,int,String,boolean_boolean'
in '/main.tex' (in the same above mentioned path).

--- a/Kapitel/00_Backend/Services/AliasSuggestionService/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionService/main.tex
@@ -3,3 +3,4 @@
 \inprelmod{Beschreibung}
 \inprelmod{addAliasSuggestion_String,int,String_boolean}
 \inpremod{removeAliasSuggestion_String,int,String_boolean}
+\inprelmod{evaluateAliasSuggestion_String,int,String,boolean_boolean}
