Changed MapObjectInfoDisplay as requested

--- a/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
+++ b/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
@@ -7,7 +7,7 @@ Es gibt zwei verschiedene Anzeigemodi:
 
 \subparagraph*{Kompakte Anzeige}
 Wird das MapObjectInfoDisplay geöffnet, wird es nur in der unteren Bildschirmhälfte angezeigt. 
-Es werden nur die wichtigsten Informationen angezeigt. Es wird nach Kartenobjekt unterschieden:
+Es werden nur die wichtigsten Informationen angezeigt. Es wird nach Typ des Kartenobjekts unterschieden:
 \begin{itemize}
     \item Gebäude: Es werden nur Gebäudenummer und Adresse angezeigt.
     \item Raum: Es werden Raumnummer, wenn vorhanden Raumtyp, Gebäudenummer des zugehörigen Gebäudes und Stockwerk angezeigt.
