--- a/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
@@ -40,4 +40,4 @@ Wird auf das \dq Logout\dq - Element geklickt, so wird der Benutzer abgemeldet u
 \subparagraph*{Navigation}
 Die Navigation beinhaltet für jede Seite, die das Admin-Layout verwendet, ein Verlinkungselement. 
 Diese Verlinkungselemente sind untereinander angeordnet, ausgehend vom obersten Punkt der Navigation.
-Als letzten Eintrag besitzt die Navigation ein Element mit der Aufschrift \dq Logout \dq. Dieser Eintrag befindet sich ganz unten in der Navigation
+Als letzten Eintrag besitzt die Navigation ein Element mit der Aufschrift \dq Logout \dq. Dieser Eintrag befindet sich ganz unten in der Navigation.
