--- a/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/main.tex
@@ -4,3 +4,4 @@
 \inprelmod{addAliasSuggestion_String,int,String_boolean}
 \inprelmod{removeAliasSuggestion_String,int,String_boolean}
 \inprelmod{evaluateAliasSuggestion_String,int,String,boolean_boolean}
+\inprelmod{getAliasSuggestions_int,int_ListAliasSuggestion}
