--- a/Kapitel/00_Backend/Services/AliasSuggestionService/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionService/main.tex
@@ -2,6 +2,6 @@
 
 \inprelmod{Beschreibung}
 \inprelmod{addAliasSuggestion_String,int,String_boolean}
-\inpremod{removeAliasSuggestion_String,int,String_boolean}
+\inprelmod{removeAliasSuggestion_String,int,String_boolean}
 \inprelmod{evaluateAliasSuggestion_String,int,String,boolean_boolean}
 \inprelmod{getAliasSuggestions_int,int_ListAliasSuggestion}
