Fix typo in 'addAliasSuggestion_String,int,String_boolean'
Fix typo in 'addAliasSuggestion_String,int,String_boolean'
in 'AliasSuggestionService', 'AliasSuggestionServiceImp'.

--- a/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/addAliasSuggestion_String,int,String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/addAliasSuggestion_String,int,String_boolean/main.tex
@@ -6,7 +6,7 @@ Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{Ali
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Alias-Vorschlag zur Datenbank der Alias-Vorschlägen hinzugefügt werden kann.
-Hierfür wird der gewünschte Alias-Vorschlag als Zeichenkette und die ID des dazugehörigen Kartenobjekts als auch der vorschlagender Benutzer übergeben.
+Hierfür wird der gewünschte Alias-Vorschlag als Zeichenkette und die ID des dazugehörigen Kartenobjekts als auch der vorschlagende Benutzer übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item aliasSuggestion : String
