--- a/Kapitel/00_Backend/Services/AliasSuggestionService/addAliasSuggestion_String,int,String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionService/addAliasSuggestion_String,int,String_boolean/main.tex
@@ -5,7 +5,7 @@ Definiert das Erteilen der Anweisung an Klasse \texttt{AliasSuggestionRepository
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Alias-Vorschlag zur Datenbank der Alias-Vorschlägen hinzugefügt werden kann.
-Hierfür wird der gewünschte Alias-Vorschlag als Zeichenkette und die ID des dazugehörigen Kartenobjekts als auch der vorschlagender Benutzer übergeben.
+Hierfür wird der gewünschte Alias-Vorschlag als Zeichenkette und die ID des dazugehörigen Kartenobjekts als auch der vorschlagende Benutzer übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item aliasSuggestion : String
