Fixed hopefully all typos

--- a/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
+++ b/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
@@ -32,10 +32,10 @@ Es wird folgendes angezeigt:
         Wird auf diesen Button geklickt werden an gleicher Stelle  alle globalen Aliasse angezeigt. 
         Der Button enthält dann den Text \dq{}weniger anzeigen\dq{}. Wird er nun geklickt wird wieder nur die 
         reduzierte Anzahl globaler Aliasse angezeigt und der Button zeigt wieder \dq{}mehr anzeigen\dq{}.
-        \item Gibt es noch keine globalen Aliasse wird ein Text angezeigt. Dieser Text weißt den Benutzer 
+        \item Gibt es noch keine globalen Aliasse wird ein Text angezeigt. Dieser Text weist den Benutzer 
         darauf hin, dass es noch keine globalen Aliasse gibt und dass der Benutzer selbst einen vorschlagen kann.
     \end{itemize}
-    Neben der Überschrift befindet sich auf der rechten Seite ein Button auf dem \dq{}Vorschlagen\dq{} steht.
+    Neben der Überschrift befindet sich auf der rechten Seite ein Button auf dem \dq{}Vorschlagen\dq{} oder ein gleichbedeutendes Symbol steht.
     Wird auf diesen Button geklickt, wird dies dem ViewModel mitgeteilt.
     \item Lokale Aliasse: Es werden lokale Aliasse für dieses Kartenobjekt angezeigt. 
     \begin{itemize}
@@ -43,7 +43,7 @@ Es wird folgendes angezeigt:
         die ersten 3 Zeilen angezeigt. Rechts unten befindet sich dann ein Button \dq{}mehr anzeigen\dq{}. 
         Wird auf diesen Button geklickt werden an gleicher Stelle alle lokalen Aliasse angezeigt. 
         Der Button enthält dann den Text \dq{}weniger anzeigen\dq{}. Wird er nun geklickt wird wieder nur die 
-        reduzierte Anzahl globaler Aliasse angezeigt und der Button zeigt wieder \dq{}mehr anzeigen\dq{}.
+        reduzierte Anzahl lokaler Aliasse angezeigt und der Button zeigt wieder \dq{}mehr anzeigen\dq{}.
         \item Gibt es noch keine lokalen Aliasse wird ein Text angezeigt. Dieser Text weißt den Benutzer 
         darauf hin, dass es noch keine lokalen Aliasse gibt und dass der Benutzer selbst einen hinzufügen kann.
         \item Gibt es mindestens einen lokalen Alias, so wird unter den Aliassen ein Text angezeigt, 
@@ -74,7 +74,7 @@ höher, bis sie so hoch ist wie der Bildschirm. Danach befindet sie sich in der 
 Es gibt drei Möglichkeiten, von der ausführlichen in die kompakte Anzeige zu wechseln:
 \begin{itemize}
     \item Der Benutzer betätigt die Zurück-Taste (des Endgeräts).
-    \item Der Benutzer packt die ausführliche Anzeige im oberen Teil (Überschrift und höher) und zeiht sie nach unten (drag-Operation).
+    \item Der Benutzer packt die ausführliche Anzeige im oberen Teil (Überschrift und höher) und zieht sie nach unten (drag-Operation).
     \item Der Benutzer klickt auf den Button mit einem Pfeil nach unten, der neben der Überschrift angezeigt wird.
 \end{itemize}
 In allen Fällen gibt es die gleiche Animation beim Wechseln: Die ausführliche Anzeige wird immer 
@@ -84,7 +84,7 @@ kleiner, bis sie so hoch ist wie die kompakte Anzeige. Danach befindet sie sich 
 Es gibt zwei Möglichkeiten die kompakte Anzeige zu schließen:
 \begin{itemize}
     \item Der Benutzer betätigt die Zurück-Taste (des Endgeräts).
-    \item Der Benutzer packt die kompakte Anzeige im oberen Teil (Überschrift und höher) und zeiht sie nach unten (drag-Operation). 
+    \item Der Benutzer packt die kompakte Anzeige im oberen Teil (Überschrift und höher) und zieht sie nach unten (drag-Operation). 
 \end{itemize}
 In beiden Fällen gibt es die gleiche Animation: Die kompakte Anzeige verschwindet nach unten. Danach ist sie geschlossen.
 
