--- a/Kapitel/02_App/02_ViewModel/Karte/Interfaces/IMapObjectInfoController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/Interfaces/IMapObjectInfoController/main.tex
@@ -96,4 +96,4 @@ Das Feedback wird an das Model gegeben, um es an den Server zu senden.
     \item feedback : SuggestionFeedback Feedback.
 \end{itemize}
 \paragraph*{Rückgabewert}
-boolean, ob das senden erfolgreich war.
+boolean, ob das Senden erfolgreich war.
