--- a/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapDisplayDataProvider/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapDisplayDataProvider/main.tex
@@ -70,12 +70,12 @@ Gibt den LevelChangeControllers für den Etagenwechsel zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LevelChangeControllers für den Etagenwechsel.
+LevelChangeController für den Etagenwechsel.
 
 \subsubsection{\texttt{+ getMapObjectInfoController() : IMapObjectInfoController}}%$$$M
 \paragraph*{Beschreibung}
-Gibt einen IMapObjectInfoController zurück.
+Gibt den IMapObjectInfoController zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LevelChangeControllers.
+IMapObjectInfoController.
