Added in Images. Used minipages and used caption package to remove caption labels for a section. Added vertical and horizontal spaces

--- a/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
@@ -55,6 +55,13 @@ Die Spaltenüberschriften der Spalten 1-5 beinhalten ein Sortierungselement am l
 
 Der Abschnitt selber enthält die eindeutige Identifizierung des Kartenobjektes \verb#mapID# auf dass sich der Alias-Vorschlag bezieht. Dieser wird nicht angezeigt.
 
+\begin{center}
+    \captionsetup[figure]{labelformat=empty}
+    \inprelimg[width=0.7\textwidth]{alias_vorschläge_desktop.png}
+    \captionof{figure}{Desktop Ansicht}
+    \captionsetup[figure]{labelformat=default}
+\end{center}
+
 \subparagraph*{Mobil}
 Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein.\\
 Die obere Box beinhaltet den zentrierten Titel \dq Alias-Vorschläge \dq.
@@ -74,12 +81,25 @@ Jeder Alias-Vorschlag befindet sich in seinem eigenen Abschnitt, dieser ist wied
     \item Aktionen: Annehmen, Ablehnen, Blacklisten
 \end{enumerate}
 
-Segment 1 befindet sich ganz oben im Alias-Vorschlag-Abschnitt. Segmente 2 und 3 folgen untereinander unter Segment 1. \\
-Segment 4 ist in  zwei vertikale Boxen aufgeteilt (4.1 und 4.2).
-4.1 enthält die Anzahl positiver Bewertungen, 4.2 enthält ein Element zur Kennzeichnung dass 4.1 die Anzahl der positiven Bewertungen darstellt, zum Beispiel ein \dq + \dq. \\
-Segment 5 ist in  zwei vertikale Boxen aufgeteilt (5.1 und 5.2). 
-5.1 enthält die Anzahl negativer Bewertungen, 5.2 enthält ein Element zur Kennzeichnung dass 5.1 die Anzahl der negativen Bewertungen darstellt, zum Beispiel ein \dq - \dq. \\
-Segment 6 enthält drei vertikale Boxen. Jede Box ist genau einer Aktion zugeordnet und enthält ein Element um diese auszulösen.
+\vspace{0.5em}
+\begin{minipage}{\textwidth}
+    \begin{minipage}{.5\textwidth}
+        Segment 1 befindet sich ganz oben im Alias-Vorschlag-Abschnitt. Segmente 2 und 3 folgen untereinander unter Segment 1. \\
+        Segment 4 ist in  zwei vertikale Boxen aufgeteilt (4.1 und 4.2).
+        4.1 enthält die Anzahl positiver Bewertungen, 4.2 enthält ein Element zur Kennzeichnung dass 4.1 die Anzahl der positiven Bewertungen darstellt, zum Beispiel ein \dq + \dq. \\
+        Segment 5 ist in  zwei vertikale Boxen aufgeteilt (5.1 und 5.2). 
+        5.1 enthält die Anzahl negativer Bewertungen, 5.2 enthält ein Element zur Kennzeichnung dass 5.1 die Anzahl der negativen Bewertungen darstellt, zum Beispiel ein \dq - \dq. \\
+        Segment 6 enthält drei vertikale Boxen. Jede Box ist genau einer Aktion zugeordnet und enthält ein Element um diese auszulösen.
+    \end{minipage}
+    \begin{minipage}{.5\textwidth}
+        \hspace{.2\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[height=0.9\textwidth]{alias_vorschläge_mobil.png}    
+        \captionof{figure}{Mobile Ansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
+\vspace{0.5em}
 
 Der Abschnitt selber enthält die eindeutige Identifizierung des Kartenobjektes \verb#mapID# auf dass sich der Alias-Vorschlag bezieht. Dieser wird nicht angezeigt.
 
