--- a/preamble.tex
+++ b/preamble.tex
@@ -4,6 +4,8 @@
 \usepackage{hyperref}
 \usepackage[toc]{glossaries}
 
+\usepackage{caption}
+
 \newcounter{user_data_end}
 
 \newcommand{\glossaryentry}[3] {
