--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -15,17 +15,36 @@ Jeder kann die Startseite aufrufen und verwenden.
 \paragraph{Aufgabe}
 Die Startseite hat die folgenden Aufgaben:
 
-\begin{itemize}
-    \item Anzeigen des Webseitentitels
-    \item Anzeigen der Beschreibung
-    \item Authentifizierungsstelle für Benutzer
-    \item Überprüfung des Berechtigungslevels für Benutzer
-    \item Automatische Weiterleitung von Administratoren zum Dashboard
-    \item Anzeigen von Verlinkungen zu Projektressourcen
-\end{itemize}
+\vspace*{0.5em}
+\begin{minipage}{\textwidth}
+    \begin{minipage}{.69\textwidth}
+        \begin{itemize}
+            \item Anzeigen des Webseitentitels
+            \item Anzeigen der Beschreibung
+            \item Authentifizierungsstelle für Benutzer
+            \item Überprüfung des Berechtigungslevels für Benutzer
+            \item Automatische Weiterleitung von Administratoren zum Dashboard
+            \item Anzeigen von Verlinkungen zu Projektressourcen
+        \end{itemize}
+    \end{minipage}
+    \begin{minipage}{.29\textwidth}
+        \hspace{2em}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[height=\textwidth]{startseite_mobil.png}
+        \captionof{figure}{Mobile Ansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
 
 \paragraph*{Statischer Aufbau}
 Der spezifische Inhalt dieser Seite besteht ausschließlich aus einem Titel und der zugehörigen Beschreibung.
 
 \paragraph*{Dynamisches Verhalten}
 Keines
+
+\begin{center}
+    \captionsetup[figure]{labelformat=empty}
+    \inprelimg[width=.5\textwidth]{startseite_desktop.png}
+    \captionof{figure}{Desktop Ansicht}
+    \captionsetup[figure]{labelformat=default}
+\end{center}
