--- a/Kapitel/04_Admin_Panel/02_Aufbau/06_Änderungen/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/06_Änderungen/main.tex
@@ -59,14 +59,34 @@ Die Spalte 3 beinhaltet eine zweispaltige Tabelle. Diese zeigt die konkreten Dat
 Die Spalte 4 beinhaltet eine Box. Diese beinhaltet Elemente, die die Aktionen \dq Akzeptieren \dq{} und \dq Revidieren \dq{} repräsentieren. \\
 Die Spalten 1 und 2 besitzen ein Sortierungselement am linken Ende.
 
-\subparagraph*{Mobil}
-Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein. \\
-Die obere Box beinhaltet den zentrierten Titel \dq Änderungen\dq.
-Die untere Box beinhaltet die Sortierungsoptionen, die Änderungen und zwei Aktionselemente, die die Aktionen \dq Alle durchführen\dq{} und \dq Alle revidieren\dq{} repräsentieren. \\
-Die Sortierungsoptionen befinden sich ganz oben und sind in zwei Auswahlelemente aufgeteilt. 
-Das erste Auswahlelement beinhaltet jeweils einen Eintrag zu Zeit und Kategorie.
-Das zweite Auswahlelement beinhaltet die Einträge \dq Aufsteigend \dq{} und \dq Absteigend \dq{} oder Synonyme bzw. Abkürzungen dieser.\\
-Unter den Sortierungsoptionen befinden sich die Aktionselemente, darunter folgen die Änderungen.
+\begin{center}
+    \captionsetup[figure]{labelformat=empty}
+    \inprelimg[width=0.7\textwidth]{änderungen_desktop.png}
+    \captionof{figure}{Desktop Ansicht}
+    \captionsetup[figure]{labelformat=default}
+\end{center}
+
+\vspace{0.5em}
+\begin{minipage}{\textwidth}
+    \begin{minipage}{.5\textwidth}
+        \subparagraph*{Mobil}
+        Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein. \\
+        Die obere Box beinhaltet den zentrierten Titel \dq Änderungen\dq.
+        Die untere Box beinhaltet die Sortierungsoptionen, die Änderungen und zwei Aktionselemente, die die Aktionen \dq Alle durchführen\dq{} und \dq Alle revidieren\dq{} repräsentieren. \\
+        Die Sortierungsoptionen befinden sich ganz oben und sind in zwei Auswahlelemente aufgeteilt. 
+        Das erste Auswahlelement beinhaltet jeweils einen Eintrag zu Zeit und Kategorie.
+        Das zweite Auswahlelement beinhaltet die Einträge \dq Aufsteigend \dq{} und \dq Absteigend \dq{} oder Synonyme bzw. Abkürzungen dieser.\\
+        Unter den Sortierungsoptionen befinden sich die Aktionselemente, darunter folgen die Änderungen.
+    \end{minipage}
+    \begin{minipage}{.5\textwidth}
+        \hspace{.2\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[height=0.9\textwidth]{änderungen_mobil.png}
+        \captionof{figure}{Mobile Ansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
+\vspace{0.5em}
 
 Jede Änderung befindet sich in seinem eigenen Abschnitt, dieser ist wiederum in folgende Segmente aufgeteilt:
 
