--- a/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
@@ -1,3 +1,4 @@
+\newpage
 \subsection{Dashboard}
 
 Das Dashboard ist die erste Seite auf die der Benutzer weitergeleitet wird, sofern er sich als Administrator authentifiziert hat.
