--- a/Kapitel/04_Admin_Panel/02_Aufbau/06_Änderungen/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/06_Änderungen/main.tex
@@ -1,3 +1,4 @@
+\newpage
 \subsection{Änderungen}
 
 Die Aktionen-Seite zeigt alle Änderungen an offiziellen Aliassen, Alias-Vorschlägen und der Blacklist an und ermöglicht das Akzeptieren oder Revidieren der Änderungen.
