--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -1,3 +1,4 @@
+\newpage
 \subsection{Offizielle Aliasse}
 
 Die Offizielle-Aliasse-Seite zeigt alle aktuell angenommenen und somit offiziellen Aliasse an.
