--- a/Kapitel/00_Backend/Services/DeletedAliasService/addDeletedAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/addDeletedAlias_String,int_boolean/main.tex
@@ -4,16 +4,16 @@ Definiert das Erteilen der Anweisung an Klasse \texttt{DeletedAliasRepository}, 
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
-Die Methode ermöglicht, dass ein Administrator einen entfernten Alias zur Datenbank der entfernten Aliassen hinzufügen kann.
-Hierfür wird der gewünschte, entfernte Alias als Zeichenkette als auch die ID des dazugehörigen Kartenobjekts übergeben.
+Die Methode ermöglicht, dass ein Administrator einen Alias zur Datenbank der entfernten Aliassen hinzufügen kann.
+Hierfür wird der entfernte Alias als Zeichenkette als auch die ID des dazugehörigen Kartenobjekts übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item deletedAlias : String
     		\paragraph*{Beschreibung}
-    		Der entfernte Alias als Zeichenkette, den man hinzufügen möchte.
+    		Der Alias als Zeichenkette, den man zur Datenbank der entfernten Aliasse hinzufügen möchte.
     \item mapID : int
     		\paragraph*{Beschreibung}
     		Die ID des Kartenobjekts, für das der entfernte Alias als Bezeichner gedient hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn der gewünschte, entfernte Alias zur Datenbank der entfernten Aliasse erfolgreich hinzugefügt werden konnte, ansonsten falsch.
+Wahr, wenn der Alias zur Datenbank der entfernten Aliasse erfolgreich hinzugefügt werden konnte, ansonsten falsch.
