Enhance javadoc for method 'removeDeletedAlias_String,int_boolean'
Enhance javadoc for methods
'Kapitel/00_Backend/Services/DeletedAliasService/
removeDeletedAlias_String,int_boolean',
'Kapitel/00_Backend/Services/DeletedAliasServiceImp/
removeDeletedAlias_String,int_boolean' in '/main.tex'
(in the same above mentioned paths).

Rename directories to
'removeDeletedAlias_String_boolean'.

--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/removeDeletedAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/removeDeletedAlias_String_boolean/main.tex
@@ -1,7 +1,8 @@
-\paragraph*{\texttt{removeDeletedAlias(deletedAlias : String, mapID : int) : boolean}}%$$$M
+\paragraph*{\texttt{removeDeletedAlias(deletedAlias : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, einen Alias aus der Datenbank der entfernten Aliasse zu entfernen.
+Erteilt die Anweisung an Klasse \texttt{AliasRepository}, einen Alias aus der Datenbank der entfernten Aliasse zu entfernen.
 \paragraph*{Beschreibung}
+Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{DeletedAliasService}.
 Die Methode ist serverintern und wird somit nicht explizit aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Alias aus der Datenbank der entfernten Aliasse entfernt werden kann.
