--- a/Kapitel/00_Backend/Services/DeletedAliasService/addDeletedAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/addDeletedAlias_String,int_boolean/main.tex
@@ -1,11 +1,11 @@
 \paragraph*{\texttt{addDeletedAlias(deletedAlias : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{DeletedAliasRepository}, einen entfernten Alias zur Datenbank der entfernten Aliasse hinzuzufügen.
+Definiert das Erteilen der Anweisung an Klasse \texttt{DeletedAliasRepository}, einen Alias zur Datenbank der entfernten Aliasse hinzuzufügen.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator einen Alias zur Datenbank der entfernten Aliassen hinzufügen kann.
-Hierfür wird der entfernte Alias als Zeichenkette als auch die ID des dazugehörigen Kartenobjekts übergeben.
+Hierfür wird der Alias als Zeichenkette als auch die ID des dazugehörigen Kartenobjekts übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item deletedAlias : String
@@ -13,7 +13,7 @@ Hierfür wird der entfernte Alias als Zeichenkette als auch die ID des dazugehö
     		Der Alias als Zeichenkette, den man zur Datenbank der entfernten Aliasse hinzufügen möchte.
     \item mapID : int
     		\paragraph*{Beschreibung}
-    		Die ID des Kartenobjekts, für das der entfernte Alias als Bezeichner gedient hat.
+    		Die ID des Kartenobjekts, für das der Alias als Bezeichner gedient hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn der Alias zur Datenbank der entfernten Aliasse erfolgreich hinzugefügt werden konnte, ansonsten falsch.
+Wahr, wenn der Alias zur Datenbank der entfernten Aliasse erfolgreich hinzugefügt werden konnte oder wenn der Alias bereits in der Datenbank der entfernten Aliasse hinterlegt war, ansonsten falsch.
