Fix typo in method as requested
Fix typo in methods
'Kapitel/00_Backend/Services/DeletedAliasService/
removeDeletedAlias_String_boolean',
'Kapitel/00_Backend/Services/DeletedAliasServiceImp/
removeDeletedAlias_String_boolean' in '/main.tex'
(in the same above mentioned paths).

--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/removeDeletedAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/removeDeletedAlias_String_boolean/main.tex
@@ -14,4 +14,4 @@ Hierfür wird der Alias als Zeichenkette und die ID des dazugehörigen Kartenobj
     		Der Alias als Zeichenkette, der in der Datenbank der entfernten Aliasse hinterlegt ist und entfernt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn der Alias, der in der Datenbank der entfernten Aliasse hinterlegt ist, erfolgreich entfernt werden wurde oder wenn der Alias bereits nicht in der Datenbank der entfernten Aliasse hinterlegt war. Im sonstigen Fall wird falsch zurückgegeben.
+Wahr, wenn der Alias, der in der Datenbank der entfernten Aliasse hinterlegt ist, erfolgreich entfernt werden konnte oder wenn der Alias bereits nicht in der Datenbank der entfernten Aliasse hinterlegt war, ansonsten falsch.
