--- a/Kapitel/00_Backend/Services/DeletedAliasService/removeDeletedAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/removeDeletedAlias_String_boolean/main.tex
@@ -13,4 +13,4 @@ Hierfür wird der Alias als Zeichenkette übergeben.
     		Der Alias als Zeichenkette, der in der Datenbank der entfernten Aliasse hinterlegt ist und entfernt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn der Alias, der in der Datenbank der entfernten Aliasse hinterlegt ist, erfolgreich entfernt werden wurde oder wenn der Alias bereits nicht in der Datenbank der entfernten Aliasse hinterlegt war, ansonsten falsch.
+Wahr, wenn der Alias, der in der Datenbank der entfernten Aliasse hinterlegt ist, erfolgreich entfernt werden konnte oder wenn der Alias bereits nicht in der Datenbank der entfernten Aliasse hinterlegt war, ansonsten falsch.
