Add javadoc for method 'getMapObject_int_String'
Add javadoc for methods
'Kapitel/00_Backend/Services/MapIDService/
getMapObject_int_String',
'Kapitel/00_Backend/Services/MapIDServiceImp/
getMapObject_int_String' in '/main.tex'
(in the same above mentioned paths).

--- a/Kapitel/00_Backend/Services/MapIDService/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDService/main.tex
@@ -3,3 +3,4 @@
 \inprelmod{Beschreibung}
 \inprelmod{addMapObject_String_boolean}
 \inprelmod{removeMapObject_int_boolean}
+\inprelmod{getMapObject_int_String}
