--- a/Kapitel/00_Backend/Services/MapIDServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDServiceImp/main.tex
@@ -3,3 +3,4 @@
 \inprelmod{Beschreibung}
 \inprelmod{addMapObject_String_boolean}
 \inprelmod{removeMapObject_int_boolean}
+\inprelmod{getMapObject_int_String}
