--- a/Kapitel/00_Backend/Services/MapIDService/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDService/main.tex
@@ -4,3 +4,4 @@
 \inprelmod{addMapObject_String_boolean}
 \inprelmod{removeMapObject_int_boolean}
 \inprelmod{getMapObject_int_String}
+\inprelmod{getMapIDByName_String_int}
