--- a/Kapitel/00_Backend/Services/MapIDServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDServiceImp/main.tex
@@ -5,3 +5,4 @@
 \inprelmod{removeMapObject_int_boolean}
 \inprelmod{getMapObject_int_String}
 \inprelmod{getMapIDByName_String_int}
+\inprelmod{getAllMapIDs_ListInt}
