Fix wrong class in javadoc for methods in 'DeletedAliasService(Imp)'

--- a/Kapitel/00_Backend/Services/DeletedAliasService/removeDeletedAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/removeDeletedAlias_String_boolean/main.tex
@@ -1,6 +1,6 @@
 \paragraph*{\texttt{removeDeletedAlias(deletedAlias : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, einen Alias aus der Datenbank der entfernten Aliasse zu entfernen.
+Definiert das Erteilen der Anweisung an Klasse \texttt{DeletedAliasRepository}, einen Alias aus der Datenbank der entfernten Aliasse zu entfernen.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
