--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/getDeletedAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/getDeletedAlias_int_ListAlias/main.tex
@@ -1,6 +1,6 @@
 \paragraph*{\texttt{getDeletedAlias(version : int) : List<alias : String, mapID : int>}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Erteilt die Anweisung an Klasse \texttt{AliasRepository}, eine Liste der entfernten Aliasse seit einer bestimmten Version zurückzugeben, und gibt diese wiederum zurück.
+Erteilt die Anweisung an Klasse \texttt{DeletedAliasRepository}, eine Liste der entfernten Aliasse seit einer bestimmten Version zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
 Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{DeletedAliasService}.
 Die Methode ist serverintern und wird somit nicht explizit aufgerufen.
