--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/removeDeletedAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/removeDeletedAlias_String_boolean/main.tex
@@ -1,6 +1,6 @@
 \paragraph*{\texttt{removeDeletedAlias(deletedAlias : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Erteilt die Anweisung an Klasse \texttt{AliasRepository}, einen Alias aus der Datenbank der entfernten Aliasse zu entfernen.
+Erteilt die Anweisung an Klasse \texttt{DeletedAliasRepository}, einen Alias aus der Datenbank der entfernten Aliasse zu entfernen.
 \paragraph*{Beschreibung}
 Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{DeletedAliasService}.
 Die Methode ist serverintern und wird somit nicht explizit aufgerufen.
