--- a/Kapitel/00_Backend/Services/DeletedAliasService/getDeletedAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/getDeletedAlias_int_ListAlias/main.tex
@@ -1,6 +1,6 @@
 \paragraph*{\texttt{getDeletedAlias(version : int) : List<alias : String, mapID : int>}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, eine Liste der entfernten Aliasse seit einer bestimmten Version zurückzugeben, und gibt diese wiederum zurück.
+Definiert das Erteilen der Anweisung an Klasse \texttt{DeletedAliasRepository}, eine Liste der entfernten Aliasse seit einer bestimmten Version zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
