Fix typo in method 'addToBlacklist_String_boolean'
Fix typo in javadoc of method
'addToBlacklist_String_boolean' in
'BlackListService', 'BlacklistServiceImp'.

--- a/Kapitel/00_Backend/Services/BlacklistServiceImp/addToBlacklist_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistServiceImp/addToBlacklist_String_boolean/main.tex
@@ -15,4 +15,4 @@ Hierfür wird die in die Blacklist aufzunehmende Zeichenkette übergeben.
     		Die in die Blacklist aufzunehmende Zeichenkette.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn die übergebene Zeichenkette in die Blacklist erfolgreich aufgenommen werden konnte oder die Zeichenkette bereits in der Datenbank hinterlegt war, ansonsten falsch.
+Wahr, wenn die übergebene Zeichenkette in die Blacklist erfolgreich aufgenommen werden konnte oder die Zeichenkette bereits in der Blacklist hinterlegt war, ansonsten falsch.
