--- a/Kapitel/00_Backend/Services/BlacklistService/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistService/main.tex
@@ -3,3 +3,4 @@
 \inprelmod{Beschreibung}
 \inprelmod{addToBlacklist_String_boolean}
 \inprelmod{removeFromBlacklist_String_boolean}
+\inprelmod{isBlacklisted_String_boolean}
