Add javadoc for method 'getBlacklist_ListString'
Add javadoc for methods
'Kapitel/00_Backend/Services/BlacklistService/
getBlacklist_ListString',
'Kapitel/00_Backend/Services/BlacklistServiceImp/
getBlacklist_ListString' in '/main.tex'
(in the same above mentioned paths).

--- a/Kapitel/00_Backend/Services/BlacklistService/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistService/main.tex
@@ -4,3 +4,4 @@
 \inprelmod{addToBlacklist_String_boolean}
 \inprelmod{removeFromBlacklist_String_boolean}
 \inprelmod{isBlacklisted_String_boolean}
+\inprelmod{getBlacklist_ListString}
