--- a/Kapitel/00_Backend/Services/BlacklistServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistServiceImp/main.tex
@@ -4,3 +4,4 @@
 \inprelmod{addToBlacklist_String_boolean}
 \inprelmod{removeFromBlacklist_String_boolean}
 \inprelmod{isBlacklisted_String_boolean}
+\inprelmod{getBlacklist_ListString}
